force-app/main/default/objects/VIPointage__c/VIPointage__c.object-meta.xml
<CustomObject>
    <label>Pointage</label>
    <nameField>
        <displayFormat>P{000000000}</displayFormat>
        <label>Ref de Pointage</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pointages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>