force-app/main/default/objects/VIPointage__c/fields/Affaire__c.field-meta.xml
<CustomField>
    <fullName>Affaire__c</fullName>
    <label>Affaire</label>
    <referenceTo>VIAffaire__c</referenceTo>
    <relationshipLabel>Pointages</relationshipLabel>
    <relationshipName>Pointages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>