force-app/main/default/objects/VIPointage__c/fields/Annee_Ori__c.field-meta.xml
<CustomField>
    <fullName>Annee_Ori__c</fullName>
    <label>Annee_Ori</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>