force-app/main/default/objects/VIPointage__c/fields/Calcul_retroactif__c.field-meta.xml
<CustomField>
    <fullName>Calcul_retroactif__c</fullName>
    <formula>if(left(Numero_unique__c,3)=&apos;REC&apos;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calcul retroactif</label>
    <type>Checkbox</type>
</CustomField>