force-app/main/default/objects/VIPointage__c/fields/Centre_Section__c.field-meta.xml
<CustomField>
    <fullName>Centre_Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Centre / Section</label>
    <referenceTo>VICentre_Section__c</referenceTo>
    <relationshipLabel>Pointages</relationshipLabel>
    <relationshipName>Pointages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>