force-app/main/default/objects/VIPointage__c/fields/Complet__c.field-meta.xml
<CustomField>
    <fullName>Complet__c</fullName>
    <label>Complet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>