force-app/main/default/objects/VIPointage__c/fields/Date_comptabilisation__c.field-meta.xml
<CustomField>
    <fullName>Date_comptabilisation__c</fullName>
    <label>Date comptabilisation</label>
    <type>Date</type>
</CustomField>