force-app/main/default/objects/VIPointage__c/fields/Debours__c.field-meta.xml
<CustomField>
    <fullName>Debours__c</fullName>
    <label>Debours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>