force-app/main/default/objects/VIPointage__c/fields/Debours_E__c.field-meta.xml
<CustomField>
    <fullName>Debours_E__c</fullName>
    <label>Debours €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>