force-app/main/default/objects/VIPointage__c/fields/Employe__c.field-meta.xml
<CustomField>
    <fullName>Employe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employé</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pointages</relationshipName>
    <type>Lookup</type>
</CustomField>