force-app/main/default/objects/VIPointage__c/fields/Heures__c.field-meta.xml
<CustomField>
    <fullName>Heures__c</fullName>
    <label>Heures</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>