force-app/main/default/objects/VIPointage__c/fields/Numero_unique__c.field-meta.xml
<CustomField>
    <fullName>Numero_unique__c</fullName>
    <label>Numéro_unique</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>