force-app/main/default/objects/VIPointage__c/fields/PRI_E__c.field-meta.xml
<CustomField>
    <fullName>PRI_E__c</fullName>
    <label>PRI €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>