force-app/main/default/objects/VIPointage__c/fields/Sous_chapitre__c.field-meta.xml
<CustomField>
    <fullName>Sous_chapitre__c</fullName>
    <label>Sous chapitre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sous_chapitre</valueSetName>
    </valueSet>
</CustomField>